Fixed the bug on mobile screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2237,6 +2237,8 @@ input[type="submit"]:after,
 				/*background-image: url("images/intro.svg");*/
 				background-image: url("images/top.jpg");
 				background-position: right top;
+
+				/*background-position: center center;*/
 				background-repeat: no-repeat;
 				/*background-size: 100% 100%;*/
 				background-size: 100% auto;
@@ -2244,6 +2246,18 @@ input[type="submit"]:after,
 				flex-direction: column;
 				justify-content: center;
 				min-height: 100vh;
+
+			}
+
+			@media screen and (max-width: 736px) {
+
+				#main > section.one {
+
+
+					background-size: auto 100%;
+
+
+				}
 
 			}
 
